# mini_engine

./: .clang-format  .clang-format-ignore  .editorconfig  .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  LICENSE  MiniEngine.sln  MiniEngine.vcxproj  MiniEngine.vcxproj.filters
bench/: CMakeLists.txt  benchmark.cxx
bench/concurrency/: atomic.cpp
bench/container/: string.cpp
bench/memory/: CMakeLists.txt  atomic.cpp
bench/string/: CMakeLists.txt  string.cpp
bench/thread/: atomic.cpp
benchmark/: CMakeLists.txt
benchmark/container/: string.cpp
engine/source/: CMakeLists.txt  mini_engine.cxx
engine/source/apple/: CMakeLists.txt  apple.cxx  apple_shared_ptr.cxx  apple_window.cxx
engine/source/apple/include/: appkit.h  foundation.h
engine/source/apple/macos/: CMakeLists.txt  macos.cxx  macos_handle.cxx  macos_module.cxx  macos_window.cxx
engine/source/apple/public/: quartzcore.h
engine/source/core/: CMakeLists.txt  algorithm.cxx  assert.cpp  assert.h  core.cxx  define.h  interface.cpp  interface.cxx  log.cxx  logger.cxx  macro.h  module.cxx  utility.cxx
engine/source/core/algorithm/: algorithm.cxx  algorithm_memory.cxx
engine/source/core/array/: array.cxx  array_iterator.cxx  dynamic_array.cxx  static_array.cxx
engine/source/core/assert/: assertion.cpp  assertion.h
engine/source/core/atomic/: atomic_macos.cxx  atomic_win.cxx
engine/source/core/bit/: bit.cxx  bit.h  bit_base.cxx  bit_operation.cxx  bit_win.cxx
engine/source/core/chrono/: chrono.cxx  clock.cxx  clock_macos.cxx  clock_win.cxx  duration.cxx  time_point.cxx
engine/source/core/concurrency/: atomic.cxx  atomic_base.cxx  atomic_platform_macos.cxx  atomic_platform_win.cxx  atomic_wait.cxx  atomic_wait_macos.cxx  atomic_wait_win.cxx  mutex.cxx  mutex_macos.cxx  mutex_win.cxx
engine/source/core/container/: array.cxx  dynamic_buffer.cxx  fixed_array.cxx  fixed_buffer.cxx  fixed_queue.cxx  format.cxx  static_array.cxx  static_buffer.cxx  static_queue.cxx  string.cxx  string_convert.cxx  string_view.cxx  trivial_buffer.cxx
engine/source/core/debug/: debug.cxx  logger.cxx  logger_macos.cxx  logger_win.cxx
engine/source/core/impl/: assert.cpp  assert_util.cpp  assert_util.h  builtin.h  cstring.h  module_system.cpp
engine/source/core/include/: assertion.h  option.h  win_assert.h  win_assertion.h
engine/source/core/internal/: min_windows.h
engine/source/core/iterator/: array_iterator.cxx  circular_iterator.cxx  iterator.cxx  iterator_std.cxx  iterator_type.cxx  iterator_version.cxx  move_iterator.cxx  ptr_iterator.cxx
engine/source/core/macos/: macos_assert.cpp  macos_atomic.cxx  macos_log.cpp  macos_log.mm  macos_logger.cxx  macos_module.cxx  macos_mutex.cxx  macos_thread.cxx
engine/source/core/math/: cmath.h  color.cxx  math.cxx  math_base.cxx  math_operation.cxx  math_type.cxx  ratio.cxx  rect.cxx  rect_int.cxx  vector2.cxx  vector2_int.cxx  vector3.cxx  vector3_int.cxx  vector4.cxx  vertex.cxx
engine/source/core/memory/: allocator.cxx  atomic.cxx  atomic_base.cxx  atomic_wait.cxx  buffer.cxx  core_memory.cxx  cstring.h  cwstring.h  deleter.cxx  dynamic_buffer.cxx  mem_string.cpp  mem_string.cxx  memory.cxx  memory.h  memory_operation.cxx  shared_counter.cxx  shared_ptr.cxx  static_buffer.cxx  trivial_buffer.cxx  unique_ptr.cxx  weak_ptr.cxx
engine/source/core/meta/: numeric.cxx  ratio.cxx  type_concepts.cxx  type_define.cxx  type_traits.cxx
engine/source/core/module/: dynamic_module.cxx  module.cxx  module_initializer.cxx  module_loader.cxx  module_macos.cxx  module_static.cxx  module_system.cxx  module_win.cxx  (+1 more)
engine/source/d3d12/: CMakeLists.txt  d3d12.cxx  d3d12_command_queue.cpp  d3d12_command_queue.cxx  d3d12_descriptor.cpp  d3d12_descriptor.cxx  d3d12_device.cpp  d3d12_device.cxx  d3d12_include.h  d3d12_render_context.cpp  d3d12_render_context.cxx  d3d12_renderer.cxx  d3d12_swap_chain.cpp  d3d12_swap_chain.cxx
engine/source/engine/: CMakeLists.txt  engine.cpp  engine.cxx  option.cxx
engine/source/graphics/: CMakeLists.txt  device.cxx  graphics.cpp  graphics.cxx  graphics_common.cxx  graphics_interface.cxx  render_context.cxx  renderer.cxx  swap_chain.cxx
engine/source/launcher/: CMakeLists.txt  launcher.cxx  macos_main.cpp  win_main.cpp
engine/source/macos/: CMakeLists.txt  macos.cxx  macos_handle.cpp  macos_handle.cxx  macos_window.cpp  macos_window.cxx
engine/source/metal/: CMakeLists.txt  metal.cxx  metal_device.cxx  metal_render_context.cxx  metal_renderer.cxx  metal_swap_chain.cxx
engine/source/metal4/: CMakeLists.txt  metal4.cxx  metal4_buffer.cxx  metal4_common.cxx  metal4_device.cxx  metal4_render_pass.cxx  metal4_renderer.cxx  metal4_resource.cxx  metal4_swap_chain.cxx  metal4_texture.cxx
engine/source/platform/: CMakeLists.txt  handle.cxx  module.cxx  module_loader.cxx  platform.cpp  platform.cxx  platform_interface.cxx  window.cxx
engine/source/windows/: CMakeLists.txt  assert.h  win_handle.cpp  win_handle.cxx  win_include.h  win_log.cpp  win_module.cxx  win_shared_ptr.cxx  win_string.cxx  win_window.cpp  win_window.cxx  windows.cxx  windows_handle.cxx  windows_include.h  windows_shared_ptr.cxx  windows_window.cxx
test/: CMakeLists.txt  allocator.cpp  array.cpp  container.h  queue.cpp  shared_ptr.cpp  test.cpp  test.cxx  test_common.cxx  test_macro.h
test/array/: CMakeLists.txt  array.cpp  static_array.cpp
test/bit/: CMakeLists.txt  bit.cpp
test/chrono/: CMakeLists.txt  clock.cpp  duration.cpp  time_point.cpp
test/concurrency/: CMakeLists.txt  atomic.cpp
test/container/: CMakeLists.txt  array.cpp  fixed_array.cpp  fixed_queue.cpp  static_array.cpp  static_queue.cpp  string.cpp  string_convert.cpp
test/include/: test_macro.h
test/math/: CMakeLists.txt  math.cpp  ratio.cpp
test/memory/: CMakeLists.txt  allocator.cpp  atomic.cpp  shared_ptr.cpp  weak_ptr.cpp
test/queue/: CMakeLists.txt  static_queue.cpp
test/string/: CMakeLists.txt  string.cpp  string_convert.cpp  string_define.h  string_view.cpp
test/thread/: atomic.cpp
test/utility/: CMakeLists.txt  bit.cpp  shared_ptr.cpp
(+308 files in other folders)
